outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval-359417106789860764_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, where weights dynamically adjust based on node centrality (measured by average distances to remaining nodes) and exploration progress, while incorporating a probabilistic selection mechanism that balances immediate distance with long-term path potential using a softmax function with temperature decay.}
                                                                                                                                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, where weights dynamically adjust based on node centrality (measured by average distances to remaining nodes) and exploration progress, while incorporating a probabilistic selection mechanism that balances immediate distance with long-term path potential using a softmax function with temperature decay.}
                                                                                                                                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'
